[gd_scene load_steps=53 format=3 uid="uid://bjjrxjphghfl"]

[ext_resource type="Script" uid="uid://dib31tau786d5" path="res://MainScene/Scripts/input_handler.gd" id="1_i4aej"]
[ext_resource type="Script" uid="uid://cu6ar2nvumiy0" path="res://MainScene/Scripts/phon.gd" id="2_gkokw"]
[ext_resource type="Theme" uid="uid://c8np1vq7xmrsv" path="res://MainScene/Themes/closeButton.tres" id="3_0482s"]
[ext_resource type="Script" uid="uid://d0sco7k6ljmxq" path="res://MainScene/Scripts/website_url.gd" id="4_r1dm6"]
[ext_resource type="Script" uid="uid://cjuhhmjss3upe" path="res://MainScene/Scripts/tab_bar.gd" id="5_kwfer"]
[ext_resource type="Script" uid="uid://pre7g4pv1vpg" path="res://MainScene/Scripts/make_money.gd" id="6_8vi5w"]
[ext_resource type="Script" uid="uid://bbxtkpib3bcg1" path="res://MainScene/Scripts/exit_menu_ui.gd" id="7_7hsqo"]
[ext_resource type="Script" uid="uid://rdy44blulied" path="res://MainScene/DepositLineEdit.gd" id="7_gkokw"]
[ext_resource type="Script" uid="uid://xtgrbnrl4e3v" path="res://MainScene/Scripts/options.gd" id="8_kubta"]
[ext_resource type="Script" uid="uid://dn05k4vsus5cy" path="res://MainScene/Scripts/character_movement.gd" id="9_1mfdw"]
[ext_resource type="Script" uid="uid://03p1gypngi4m" path="res://MainScene/Scripts/money_in_bankUpdateUi.gd" id="10_dv17o"]
[ext_resource type="Script" uid="uid://dninyedefr84k" path="res://MainScene/Scripts/cash_money.gd" id="11_vtsl2"]
[ext_resource type="PackedScene" uid="uid://hcgp1syja0n5" path="res://MainScene/Assets/Construction Man/CONSTRUCTIONMAN.tscn" id="13_0482s"]
[ext_resource type="Script" uid="uid://frqxd0nem02o" path="res://MainScene/Assets/Construction Man/constructionman.gd" id="14_r1dm6"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4xowi"]

[sub_resource type="QuadMesh" id="QuadMesh_a0tk4"]

[sub_resource type="QuadMesh" id="QuadMesh_4arys"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cdqbm"]
bg_color = Color(1, 1, 1, 0.552941)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_imku0"]
Label/colors/font_color = Color(0.325441, 0.325441, 0.325441, 1)
Label/styles/normal = SubResource("StyleBoxFlat_cdqbm")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6iypd"]
bg_color = Color(0.728822, 0.728822, 0.728822, 1)
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tereu"]
bg_color = Color(0.418064, 0.626248, 0.781999, 1)
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_imku0"]
bg_color = Color(0.306923, 0.306923, 0.306923, 1)
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="Theme" id="Theme_wlxy5"]
Button/styles/focus = SubResource("StyleBoxFlat_6iypd")
Button/styles/hover = SubResource("StyleBoxFlat_tereu")
Button/styles/normal = SubResource("StyleBoxFlat_imku0")
Button/styles/pressed = SubResource("StyleBoxFlat_imku0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6iypd"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_tereu"]
material = SubResource("StandardMaterial3D_6iypd")

[sub_resource type="QuadMesh" id="QuadMesh_r3fl7"]

[sub_resource type="LabelSettings" id="LabelSettings_jka67"]
font_size = 90
font_color = Color(0, 0, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_i5arm"]

[sub_resource type="Gradient" id="Gradient_wc5p8"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.493545, 0.493546, 0.493546, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jsk3o"]
gradient = SubResource("Gradient_wc5p8")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wc5p8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsk3o"]
bg_color = Color(0.621524, 0.621524, 0.621524, 0.87451)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="Theme" id="Theme_4arys"]
Button/colors/font_color = Color(0.000693898, 0.000693898, 0.000693898, 1)
Button/font_sizes/font_size = 42
Button/styles/hover = SubResource("StyleBoxFlat_wc5p8")
Button/styles/normal = SubResource("StyleBoxFlat_jsk3o")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jka67"]
albedo_color = Color(0, 0.694118, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_i5arm"]
lightmap_size_hint = Vector2i(14, 21)
material = SubResource("StandardMaterial3D_jka67")

[sub_resource type="BoxShape3D" id="BoxShape3D_jka67"]
size = Vector3(128.335, 0.10144, 128.931)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_jka67"]
sky_curve = 0.0776449
ground_curve = 0.0414106

[sub_resource type="Sky" id="Sky_i5arm"]
sky_material = SubResource("ProceduralSkyMaterial_jka67")

[sub_resource type="Environment" id="Environment_wc5p8"]
background_mode = 2
sky = SubResource("Sky_i5arm")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
reflected_light_source = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jsk3o"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_4arys"]
material = SubResource("StandardMaterial3D_jsk3o")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_6iypd"]
points = PackedVector3Array(0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tereu"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_cdqbm"]
material = SubResource("StandardMaterial3D_tereu")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_imku0"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_wlxy5"]
material = SubResource("StandardMaterial3D_imku0")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jsk3o"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jka67"]

[sub_resource type="QuadMesh" id="QuadMesh_wc5p8"]

[sub_resource type="Gradient" id="Gradient_jsk3o"]
offsets = PackedFloat32Array(0.0060241)
colors = PackedColorArray(0.556863, 0.584314, 0.576471, 0.721569)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4arys"]
gradient = SubResource("Gradient_jsk3o")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kwfer"]
radius = 2.42448
height = 4.84896

[node name="MainScene" type="Node3D"]

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("1_i4aej")

[node name="PhoneUI" type="Node2D" parent="."]
position = Vector2(769, 431)
script = ExtResource("2_gkokw")

[node name="SmallPhone" type="Node2D" parent="PhoneUI"]

[node name="MeshInstance2D" type="MeshInstance2D" parent="PhoneUI/SmallPhone"]
position = Vector2(1040.13, 675)
scale = Vector2(222.25, 72)
mesh = SubResource("CapsuleMesh_4xowi")

[node name="Label" type="Label" parent="PhoneUI/SmallPhone"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
offset_left = 930.0
offset_top = 610.0
offset_right = 1152.0
offset_bottom = 648.0
text = "Press Up Arrow to Open"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="PhoneUI/SmallPhone"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = 929.0
offset_top = 603.0
offset_right = 1152.0
offset_bottom = 649.0

[node name="BigPhone" type="Node2D" parent="PhoneUI"]
visible = false
position = Vector2(-485, -309)

[node name="Background" type="MeshInstance2D" parent="PhoneUI/BigPhone"]
position = Vector2(676, 409.5)
scale = Vector2(1536, 781)
mesh = SubResource("QuadMesh_a0tk4")

[node name="TopBar" type="Node2D" parent="PhoneUI/BigPhone"]

[node name="TopBarBg" type="MeshInstance2D" parent="PhoneUI/BigPhone/TopBar"]
modulate = Color(0.305882, 0.305882, 0.305882, 0.780392)
position = Vector2(676, 44.5)
scale = Vector2(1536, 51)
mesh = SubResource("QuadMesh_4arys")

[node name="CloseButton" type="Button" parent="PhoneUI/BigPhone/TopBar"]
offset_left = 1395.0
offset_top = 19.0
offset_right = 1444.0
offset_bottom = 70.0
size_flags_horizontal = 4
theme = ExtResource("3_0482s")
theme_override_font_sizes/font_size = 35
text = "X"

[node name="WebsiteURL" type="Label" parent="PhoneUI/BigPhone/TopBar"]
offset_left = 36.0
offset_top = 32.0
offset_right = 1316.0
offset_bottom = 57.0
theme = SubResource("Theme_imku0")
text = "https://www.LiveOffTheGovernment.com/{player_name}/Single-Dad-Life"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_r1dm6")

[node name="Pages" type="Node2D" parent="PhoneUI/BigPhone"]
script = ExtResource("5_kwfer")

[node name="TabBar" type="Node2D" parent="PhoneUI/BigPhone/Pages"]

[node name="MakingMoneyTab" type="Node2D" parent="PhoneUI/BigPhone/Pages/TabBar"]

[node name="MakingMoneyButton" type="Button" parent="PhoneUI/BigPhone/Pages/TabBar/MakingMoneyTab"]
offset_left = -92.0
offset_top = 70.0
offset_right = 676.0
offset_bottom = 91.0
theme = SubResource("Theme_wlxy5")
text = "Make Money From The Government"

[node name="Banking" type="Node2D" parent="PhoneUI/BigPhone/Pages/TabBar"]
position = Vector2(768, 0)

[node name="BankingButton" type="Button" parent="PhoneUI/BigPhone/Pages/TabBar/Banking"]
offset_left = -92.0
offset_top = 70.0
offset_right = 676.0
offset_bottom = 91.0
theme = SubResource("Theme_wlxy5")
text = "Online Banking"

[node name="MakingMoneyPage" type="Node2D" parent="PhoneUI/BigPhone/Pages"]
visible = false
script = ExtResource("6_8vi5w")

[node name="Button" type="Button" parent="PhoneUI/BigPhone/Pages/MakingMoneyPage"]
offset_left = 612.0
offset_top = 582.0
offset_right = 740.0
offset_bottom = 613.0
text = "Get Money!"

[node name="ProgressBar" type="ProgressBar" parent="PhoneUI/BigPhone/Pages/MakingMoneyPage"]
offset_left = 36.0
offset_top = 486.0
offset_right = 1316.0
offset_bottom = 513.0
size_flags_vertical = 1

[node name="MeasuringStick" type="MeshInstance2D" parent="PhoneUI/BigPhone/Pages/MakingMoneyPage"]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(-124, 470)
scale = Vector2(320, 928)
mesh = SubResource("QuadMesh_tereu")

[node name="BankingPage" type="Node2D" parent="PhoneUI/BigPhone/Pages"]
visible = false

[node name="Title" type="Label" parent="PhoneUI/BigPhone/Pages/BankingPage"]
offset_left = -96.0
offset_top = 92.0
offset_right = 1445.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "Welcome To Single's Banking"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title2" type="Label" parent="PhoneUI/BigPhone/Pages/BankingPage"]
offset_left = -96.0
offset_top = 179.0
offset_right = 1445.0
offset_bottom = 219.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "You can use the boxes below to Withdraw, or Deposit Money."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="PhoneUI/BigPhone/Pages/BankingPage"]
offset_left = 323.0
offset_top = 496.0
offset_right = 507.0
offset_bottom = 527.0
select_all_on_focus = true
script = ExtResource("7_gkokw")

[node name="HomePage" type="Node2D" parent="PhoneUI/BigPhone/Pages"]

[node name="Label" type="Label" parent="PhoneUI/BigPhone/Pages/HomePage"]
offset_left = -96.0
offset_top = 92.0
offset_right = 1445.0
offset_bottom = 802.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "Welcome to the Internet.
Select a tab above to be directed to the website of your choice.
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ExitMenuUI" type="Node2D" parent="."]
visible = false
script = ExtResource("7_7hsqo")

[node name="TopBar" type="Node2D" parent="ExitMenuUI"]

[node name="MeshInstance2D" type="MeshInstance2D" parent="ExitMenuUI/TopBar"]
position = Vector2(960, 63.5)
scale = Vector2(1920, 127)
mesh = SubResource("QuadMesh_r3fl7")

[node name="Label" type="Label" parent="ExitMenuUI/TopBar"]
offset_right = 1918.0
offset_bottom = 127.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Settings"
label_settings = SubResource("LabelSettings_jka67")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="ExitMenuUI/TopBar"]
offset_left = 1870.0
offset_right = 1920.0
offset_bottom = 50.0
theme = ExtResource("3_0482s")
theme_override_font_sizes/font_size = 30
text = "X"

[node name="Main" type="Node2D" parent="ExitMenuUI"]

[node name="MeshInstance2D" type="MeshInstance2D" parent="ExitMenuUI/Main"]
position = Vector2(959.875, 603.25)
scale = Vector2(1920.25, 952.5)
mesh = SubResource("QuadMesh_i5arm")
texture = SubResource("GradientTexture2D_jsk3o")

[node name="Options" type="Node2D" parent="ExitMenuUI/Main"]
script = ExtResource("8_kubta")

[node name="GridContainer" type="GridContainer" parent="ExitMenuUI/Main/Options"]
offset_top = 127.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Leave" type="Node2D" parent="ExitMenuUI/Main/Options/GridContainer"]

[node name="LeaveButton" type="Button" parent="ExitMenuUI/Main/Options/GridContainer/Leave"]
offset_left = 128.0
offset_top = 65.0
offset_right = 1792.0
offset_bottom = 130.0
theme = SubResource("Theme_4arys")
text = "Quit Game
"

[node name="World" type="Node3D" parent="."]

[node name="Ground" type="RigidBody3D" parent="World"]
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Ground"]
transform = Transform3D(128.332, 0, 0, 0, 0.0992278, 0, 0, 0, 128.971, -0.000213623, -0.0209708, 0.0503998)
mesh = SubResource("BoxMesh_i5arm")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00402069, -0.0160522, 0.0252991)
shape = SubResource("BoxShape3D_jka67")

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource("Environment_wc5p8")

[node name="Box" type="Node3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.17559, 0.539913, -5.05385)

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Box"]
mesh = SubResource("BoxMesh_4arys")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Box"]
shape = SubResource("ConvexPolygonShape3D_6iypd")

[node name="Box2" type="Node3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.14566, 0.539913, -2.70621)

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Box2"]
mesh = SubResource("BoxMesh_cdqbm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Box2"]
shape = SubResource("ConvexPolygonShape3D_6iypd")

[node name="Box3" type="Node3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.80371, 0.640833, -3.9832)

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Box3"]
mesh = SubResource("BoxMesh_wlxy5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Box3"]
shape = SubResource("ConvexPolygonShape3D_6iypd")

[node name="Player" type="Node3D" parent="."]

[node name="CharacterBody3D" type="CharacterBody3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.47683, 0)
script = ExtResource("9_1mfdw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/CharacterBody3D"]
mesh = SubResource("CapsuleMesh_jsk3o")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/CharacterBody3D"]
shape = SubResource("CapsuleShape3D_jka67")

[node name="Camera3D" type="Camera3D" parent="Player/CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0262231, 0.575943, -0.105634)

[node name="ScreenUI" type="Node2D" parent="."]

[node name="TopLeftMenu" type="Node2D" parent="ScreenUI"]

[node name="BackGround" type="MeshInstance2D" parent="ScreenUI/TopLeftMenu"]
position = Vector2(126.938, 58.9375)
scale = Vector2(258.125, 122.125)
mesh = SubResource("QuadMesh_wc5p8")
texture = SubResource("GradientTexture1D_4arys")

[node name="Health" type="Label" parent="ScreenUI/TopLeftMenu"]
offset_right = 256.0
offset_bottom = 23.0
text = "Health: 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hunger" type="Label" parent="ScreenUI/TopLeftMenu"]
offset_top = 24.0
offset_right = 256.0
offset_bottom = 47.0
text = "Hunger: 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Happiness" type="Label" parent="ScreenUI/TopLeftMenu"]
offset_top = 48.0
offset_right = 256.0
offset_bottom = 71.0
text = "Happiness: 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyInBank" type="Label" parent="ScreenUI/TopLeftMenu"]
offset_top = 72.0
offset_right = 256.0
offset_bottom = 95.0
text = "Bank: $0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_dv17o")

[node name="CashMoney" type="Label" parent="ScreenUI/TopLeftMenu"]
offset_top = 96.0
offset_right = 256.0
offset_bottom = 119.0
text = "In Pocket: $0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("11_vtsl2")

[node name="NPCs" type="Node" parent="."]

[node name="SK_Character_Roadworker" parent="NPCs" instance=ExtResource("13_0482s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.94973)
script = ExtResource("14_r1dm6")

[node name="Area3D" type="Area3D" parent="NPCs/SK_Character_Roadworker"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPCs/SK_Character_Roadworker/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.931635, 0)
shape = SubResource("CapsuleShape3D_kwfer")

[node name="Label3D" type="Label3D" parent="NPCs/SK_Character_Roadworker"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 1.35028, 0)
visible = false
billboard = 1
no_depth_test = true
text = "Press 'E' to Interact"

[node name="Talking" type="Node2D" parent="NPCs/SK_Character_Roadworker"]
visible = false

[node name="Text" type="Panel" parent="NPCs/SK_Character_Roadworker/Talking"]
offset_left = 256.0
offset_top = 192.0
offset_right = 1664.0
offset_bottom = 384.0

[node name="Label" type="Label" parent="NPCs/SK_Character_Roadworker/Talking/Text"]
layout_mode = 0
offset_right = 1408.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 32
text = "What's up man?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text2" type="Panel" parent="NPCs/SK_Character_Roadworker/Talking"]
offset_left = 256.0
offset_top = 512.0
offset_right = 1664.0
offset_bottom = 576.0

[node name="Label" type="Label" parent="NPCs/SK_Character_Roadworker/Talking/Text2"]
layout_mode = 0
offset_right = 1408.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 24
text = "A) Yo what up dawg, wanna do some drugs?"
vertical_alignment = 1

[node name="Text3" type="Panel" parent="NPCs/SK_Character_Roadworker/Talking"]
offset_left = 256.0
offset_top = 640.0
offset_right = 1664.0
offset_bottom = 704.0

[node name="Label" type="Label" parent="NPCs/SK_Character_Roadworker/Talking/Text3"]
layout_mode = 0
offset_right = 1408.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 24
text = "B) Yo dawg I need a job"
vertical_alignment = 1

[node name="Text4" type="Panel" parent="NPCs/SK_Character_Roadworker/Talking"]
offset_left = 256.0
offset_top = 768.0
offset_right = 1664.0
offset_bottom = 832.0

[node name="Label" type="Label" parent="NPCs/SK_Character_Roadworker/Talking/Text4"]
layout_mode = 0
offset_right = 1408.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 24
text = "C) Yo dawg I'm out"
vertical_alignment = 1

[connection signal="pressed" from="PhoneUI/SmallPhone/Button" to="PhoneUI" method="_on_button_pressed"]
[connection signal="pressed" from="PhoneUI/BigPhone/TopBar/CloseButton" to="PhoneUI" method="_on_close_button_pressed"]
[connection signal="pressed" from="PhoneUI/BigPhone/Pages/TabBar/MakingMoneyTab/MakingMoneyButton" to="PhoneUI/BigPhone/Pages" method="_on_making_money_button_pressed"]
[connection signal="pressed" from="PhoneUI/BigPhone/Pages/TabBar/Banking/BankingButton" to="PhoneUI/BigPhone/Pages" method="_on_banking_button_pressed"]
[connection signal="pressed" from="PhoneUI/BigPhone/Pages/MakingMoneyPage/Button" to="PhoneUI/BigPhone/Pages/MakingMoneyPage" method="_on_button_pressed"]
[connection signal="pressed" from="ExitMenuUI/TopBar/Button" to="ExitMenuUI" method="_on_button_pressed"]
[connection signal="pressed" from="ExitMenuUI/Main/Options/GridContainer/Leave/LeaveButton" to="ExitMenuUI/Main/Options" method="_on_leave_button_pressed"]
[connection signal="body_entered" from="NPCs/SK_Character_Roadworker/Area3D" to="NPCs/SK_Character_Roadworker" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="NPCs/SK_Character_Roadworker/Area3D" to="NPCs/SK_Character_Roadworker" method="_on_area_3d_body_exited"]
